# fastgame

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PKGBUILD  README.md  fastgame.code-workspace  meson.build
.github/workflows/: CI.yaml
data/: com.github.wwmm.fastgame.apply.policy.in  com.github.wwmm.fastgame.desktop.in  config.json  config_example.json  config_example_nvidia.json  fastgame.gresource.xml  fastgame.service  meson.build
data/examples/: a_plague_tale_innocence.json  atelier_ryza.json  civilization6.json  civilization6_sub.json  code_vein.json  control.json  dota2.json  greedfall.json  monster_hunter_world.json  ori_and_the_will_of_the_wisps.json  quantum_break.json  remember_me.json  resident_evil_2.json  rise_of_the_tomb_raider.json  shadow_of_the_tomb_raider.json  shadow_of_war.json  the_evil_within_2.json  the_witcher_3.json  wineserver.json  xcom_war_of_the_chosen.json
data/icons/scalable/emblems/: credits.txt
data/polkit/: com.github.wwmm.fastgame.apply.policy
data/profiles/: a_plague_tale_innocence.json  civilization6.json  greedfall.json  meson.build  remember_me.json  the_evil_within_2.json  the_witcher_3.json  wineserver.json  xcom_war_of_the_chosen.json
data/schemas/: com.github.wwmm.fastgame.gschema.xml  gschemas.compiled
data/ui/: about.glade.in  amdgpu.glade  amdgpu.ui  application.glade  application_window.ui  command_line_arguments.ui  cpu.glade  cpu.ui  disk.glade  disk.ui  environment_variables.glade  environment_variables.ui  factory_column_cmd_value.ui  factory_column_delete.ui  factory_column_name.ui  factory_column_value.ui  factory_env_table_column.ui  factory_sections_listview.ui  memory.glade  memory.ui  network.glade  nvidia.ui  preferences_general.ui  preferences_window.ui  preset_row.glade  preset_row.ui  presets_menu.ui  shortcuts.ui
include/: amdgpu.hpp  application.hpp  application_ui.hpp  cgroups.hpp  cmdline_options.hpp  command_line_argument_holder.hpp  command_line_arguments.hpp  config.hpp  cpu.hpp  disk.hpp  environment_variable_holder.hpp  environment_variables.hpp  ioprio.hpp  memory.hpp  netlink.hpp  network.hpp  nvidia.hpp  preferences_general.hpp  preferences_window.hpp  presets_menu.hpp  radeon.hpp  scheduler.hpp  string_literal_wrapper.hpp  tweaks.hpp  ui_helpers.hpp  util.hpp
po/: LINGUAS  POTFILES.in  fastgame.pot  nl.po  pt_BR.po
po/nl/: fastgame.po  nl.po
po/pt_BR/: fastgame.po
src/: CMakeLists.txt  amdgpu.cpp  amdgpu.hpp  application.cpp  application_ui.cpp  cgroups.cpp  cmdline_options.cpp  combobox_model.cpp  combobox_model.hpp  command_line_argument_holder.cpp  command_line_arguments.cpp  command_line_arguments.hpp  config.cpp  config.h.in  cpu.cpp  cpu.hpp  disk.cpp  disk.hpp  environment_variable_holder.cpp  environment_variables.cpp  environment_variables.hpp  fastgame.cpp  fastgame_apply.cpp  fastgame_launcher.cpp  fastgame_server.cpp  ioprio.hpp  main.cpp  memory.cpp  memory.hpp  meson.build  netlink.cpp  netlink.hpp  netlink_c.c  netlink_c.h  network.cpp  nvidia.cpp  nvidia.hpp  preferences_general.cpp  preferences_window.cpp  presets_manager.cpp  (+10 more)
src/contents/: CMakeLists.txt  com.github.wwmm.fastgame.apply.policy.in  com.github.wwmm.fastgame.desktop  com.github.wwmm.fastgame.desktop.in  com.github.wwmm.fastgame.desktop.template
src/contents/icons/: credits.txt  index.theme
src/contents/kcfg/: cfg_window.kcfg  cfg_window.kcfgc
src/contents/ui/: Amdgpu.qml  CommandLineArguments.qml  Common.js  Cpu.qml  Disk.qml  EnvironmentVariables.qml  FgSpinBox.qml  FgSwitch.qml  Main.qml  Memory.qml  Nvidia.qml  PreferencesPage.qml  PresetsMenu.qml  ScxSched.qml  main.qml
src/nvidia/: CMakeLists.txt  meson.build  nvidia.cpp  nvidia.hpp  nvml.cpp  nvml.hpp
util/: environmental_variables.sh  extract-messages.sh  extract-translation-messages.sh  kde_guides.txt  sanatizer.txt
