install_data(['config.json', 'config_example.json', 'config_example_nvidia.json'], install_dir: fastgame_config_dir)

# systemd = dependency('systemd', required : false)

# if systemd.found()
# unitdir = join_paths(prefix, 'lib/systemd/user')

# install_data(['fastgame.service'], install_dir: unitdir)
# endif